objects/FieloEE__EmailCampaign__c.object
<CustomObject>
    <fields>
        <fullName>FieloEE__AddressedTo__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Addressed to</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__DateSchedule__c</fullName>
        <label>zz_deprecated_Date Schedule</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloEE__DeliveryOptions__c</fullName>
        <label>zz_deprecated_Delivery Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                    <default>true</default>
                    <label>Now</label>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__FilterMember__c</fullName>
        <label>zz_deprecated_Filter Member</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__JobId__c</fullName>
        <label>Job Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__JobLink__c</fullName>
        <formula>IF ( ISBLANK(FieloEE__JobId__c ) , &apos;&apos;,  HYPERLINK(&apos;/ui/setup/apex/batch/ScheduleBatchApexPage?pid=&apos; +  FieloEE__JobId__c +&apos;&amp;job_name=&apos; +Name , &apos;Schedule Job&apos; )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zz_deprecated_Job Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__SendBy__c</fullName>
        <label>zz_deprecated_Send by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fielo</fullName>
                    <default>true</default>
                    <label>Fielo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Status__c</fullName>
        <label>zz_deprecated_Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Envoy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__TemplateId__c</fullName>
        <label>zz_deprecated_Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>zz_deprecated_Email Campaign</label>
    <listViews>
        <fullName>FieloEE__All_Email_Campaigns</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Email Campaigns</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Email Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zz_deprecated_Email Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloEE__ScheduleDateRequiered</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(FieloEE__DeliveryOptions__c , &apos;Schedule&apos;) ,
IF(  ISNULL( FieloEE__DateSchedule__c ) , true, false)
, false)</errorConditionFormula>
        <errorDisplayField>FieloEE__DateSchedule__c</errorDisplayField>
        <errorMessage>Scheduled Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Schedule_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF(  ISPICKVAL(FieloEE__DeliveryOptions__c , &apos;Schedule&apos;)  ,
              IF(FieloEE__DateSchedule__c &lt;=  NOW(), true, false)
, false)</errorConditionFormula>
        <errorDisplayField>FieloEE__DateSchedule__c</errorDisplayField>
        <errorMessage>The scheduled date cannot be less than today</errorMessage>
    </validationRules>
</CustomObject>